part-1/test-frontend/charts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-frontend
  labels:
    app: test-frontend
spec:
  selector:
    app: test-frontend
  ports:
    - port: 80
      targetPort: 3000
      name: http
  type: NodePort
