part-1/test-frontend/charts/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-frontend
  namespace: workshop
spec:
  hosts:
    - 'test-frontend.workshop.com'
  gateways:
    - istio-gateway
  http:
    - route:
        - destination:
            host: test-frontend
            port:
              number: 3000
